kubernetes/services/llm-router/external-name.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: llm-router-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: llm.cloud.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: unifi-home.homelab.danmanners.com
  sessionAffinity: None
