kubernetes/services/llm-router/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-router
  annotations:
    external-dns.alpha.kubernetes.io/controller: "false" # see external-name.yaml
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |-
      name: LLM Router
      conditions:
        - "[STATUS] == 200"
      url: http://router.aiml.svc.cluster.local:4000/health/liveliness
      method: GET
spec:
  hostnames:
    - llm.cloud.danmanners.com
  parentRefs:
    - kind: Gateway
      group: gateway.networking.k8s.io
      name: gwapi
      namespace: default
      sectionName: https-cloud
  rules:
    - name: llm-router
      backendRefs:
        - group: ""
          kind: Service
          name: router
          port: 4000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        backendRequest: 0s
        request: 0s
